Toaster overlapping fixed

--- a/blogile/src/app/modules/shared/nav/nav.component.scss
+++ b/blogile/src/app/modules/shared/nav/nav.component.scss
@@ -2,6 +2,4 @@
 
 nav{
     background-color: $primary-color;
-    padding-left: 2%;
-    padding-right: 2%;
 }
