--- a/blogile/src/app/modules/shared/nav/search-bar/search-bar.component.scss
+++ b/blogile/src/app/modules/shared/nav/search-bar/search-bar.component.scss
@@ -4,10 +4,5 @@
 label{
     color: white;
     display: inline-block;
-    line-height: 50px;
-}
-@media screen and (max-width: 600px) {
-    #nav-search-container {
-        width: 75%;
-    }
+   // line-height: 50px;
 }
